# vldb_voila

./: CMakeLists.txt  PerfEvent.hpp  README.md  bench.hpp  bench_tpch.cpp  bench_tpch.hpp  bench_tpch_rel.cpp  bench_tpch_rel.hpp  benchmark_wait.cpp  benchmark_wait.hpp  blend_context.cpp  blend_context.hpp  blend_space_point.cpp  blend_space_point.hpp  build.cpp.in  build.hpp.in  build_config.py  cg_fuji.cpp  cg_fuji.hpp  cg_fuji_avx512.cpp  cg_fuji_avx512.hpp  cg_fuji_control.cpp  cg_fuji_control.hpp  cg_fuji_data.cpp  cg_fuji_data.hpp  cg_fuji_scalar.cpp  cg_fuji_scalar.hpp  cg_fuji_vector.cpp  cg_fuji_vector.hpp  cg_hyper.cpp  cg_hyper.hpp  cg_vector.cpp  cg_vector.hpp  clite.cpp  clite.hpp  codegen.cpp  codegen.hpp  codegen_passes.cpp  codegen_passes.hpp  compiler.cpp  (+86 more)
db-engine-paradigms/: CMakeLists.txt  extract_results.cpp  lines2date.cpp
db-engine-paradigms/include/common/algebra/: Types.hpp
db-engine-paradigms/include/common/runtime/: Database.hpp  Types.hpp
db-engine-paradigms/src/common/algebra/: Types.cpp
db-engine-paradigms/src/common/runtime/: Database.cpp  Import.cpp
db-engine-paradigms/src/test/: tpch_expected.cpp
